; ModuleID = '/home/carl/AnghaBench/TDengine/src/system/detail/src/extr_mgmtDb.c_mgmtMonitorDbDrop.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/system/detail/src/extr_mgmtDb.c_mgmtMonitorDbDrop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@dbSdb = common dso_local global i32 0, align 4
@TSDB_DB_STATUS_DROPPING = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mgmtMonitorDbDrop(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  store i8* null, i8** %5, align 8
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %6, align 8
  br label %7

7:                                                ; preds = %2, %21
  %8 = load i32, i32* @dbSdb, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = bitcast %struct.TYPE_3__** %6 to i8**
  %11 = call i8* @sdbFetchRow(i32 %8, i8* %9, i8** %10)
  store i8* %11, i8** %5, align 8
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %13 = icmp eq %struct.TYPE_3__* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %7
  br label %25

15:                                               ; preds = %7
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @TSDB_DB_STATUS_DROPPING, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %15
  br label %7

22:                                               ; preds = %15
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %24 = call i32 @mgmtDropDb(%struct.TYPE_3__* %23)
  br label %25

25:                                               ; preds = %22, %14
  ret void
}

declare dso_local i8* @sdbFetchRow(i32, i8*, i8**) #1

declare dso_local i32 @mgmtDropDb(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
